--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       17/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 151 points<br>
+Unlocked       18/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 153 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -19,6 +19,7 @@ Unlocked       17/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -58,30 +59,30 @@ Unlocked       17/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-7725 rev-parse
- 569 config
- 178 status
- 127 stash
-  98 commit
-  84 push
-  62 checkout
-  39 add
-  30 diff
-  30 branch
-  27 pull
-  17 remote
+8275 rev-parse
+ 571 config
+ 208 stash
+ 191 status
+ 109 commit
+  89 push
+  66 checkout
+  44 add
+  36 branch
+  31 diff
+  29 pull
+  18 remote
   17 achievements
   15 fetch
   12 reset
-   8 rebase
+  10 rebase
    7 cherry-pick
    6 log
    6 clone
    4 symbolic-ref
    4 show
+   4 rm
    4 mv
    4 init
-   2 rm
    2 blame
    1 tag
    1 submodule
@@ -105,7 +106,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
-<li><div class="title">Butcher</div><div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div><div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
